# cusparse-experiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  hardware.txt  plot_results.py  sweep_all.sh  sweep_bsr_results.csv  sweep_density_bell.csv  sweep_pattern_128.csv  sweep_pattern_256.csv  sweep_pattern_32.csv  sweep_pattern_64.csv  sweep_results.csv  sweep_ultra_bell.csv
include/: bsr_matrix.hpp  cuda_bsr_matrix.hpp  cuda_profiling_suite.hpp  cuda_utils.h  kernel_launch_tracker.hpp  profiling_suite.hpp
results/: semi_sparse_results.csv
src/: main.cu  main_bell.cu  main_bell_sm_profile.cu  main_bsr_fp16.cu  main_gemm.cu
